--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,10 @@
 <body>
     <title>英語名言Bot</title>
 
-    <font color="blue"><h2>英語名言Botの公式ページです</h2><font></span>
+    <font color="blue"><h2>英語名言Botの公式ページです</h2></font>
     <img src="https://iconbu.com/wp-content/uploads/2020/03/%E3%83%91%E3%83%B3%E3%83%80.jpg">
 
-    <h1>名言再生【English】</h1>
+    <h5>名言再生【English】</h5>
         <audio controls>
             <source src="audio/audio_english_text.mp3">
         </audio>
